# cpp-transport-catalogue

./: .gitignore  CMakeLists.txt
sprint-15/: driving_licence.h  identity_document.h  international_driving_licence.h  main.cpp  main_origin.cpp  passport.h  travel_pack.h
sprint-15/step-3/: main.cpp  ppm_image.cpp  ppm_image.h
sprint-15/step-3/Cypher/: CMakeLists.txt  main.cpp
sprint-15/step-3/ImgConverter/: main.cpp
sprint-15/step-3/ImgLib/: CMakeLists.txt  img_lib.cpp  img_lib.h  jpeg_image.cpp  ppm_image.h
sprint-15/step-4/: CMakeLists.txt
sprint-15/step-4/src/: main.cpp  saveload.h
sprint-15/step-4/src/ImgConverter/: main.cpp
sprint-15/step-4/src/ImgLib/: CMakeLists.txt  bmp_image.cpp  bmp_image.h  img_lib.cpp  jpeg_image.h  ppm_image.cpp
sprint-15/step-4/src/person/: CMakeLists.txt  address.proto  main.cpp  person.proto
sprint-15/step-4/src/phone-book-serialize/: iterator_range.h  main.cpp  phone_book.cpp  phone_book.h
src/: main.cpp  vector.h
src/tests/: vector_test.cpp  vector_test.h
transport-catalogue/: CMakeLists.txt  domain.cpp  domain.h  geo.cpp  geo.h  graph.h  input_reader.cpp  input_reader.h  json.cpp  json.h  json_builder.cpp  json_builder.h  json_reader.cpp  json_reader.h  main.cpp  map_renderer.cpp  map_renderer.h  ranges.h  request.h  request_handler.cpp  request_handler.h  response.h  router.h  serialization.cpp  serialization.h  stat_reader.cpp  stat_reader.h  svg.cpp  svg.h  transport_catalogue.cpp  transport_catalogue.h  transport_router.cpp  transport_router.h  transport_router.proto
transport-catalogue/detail/: test_framework.h  type_traits.h
transport-catalogue/schema/: graph.proto  map_renderer.proto  svg.proto  transport_catalogue.proto  transport_router.proto
transport-catalogue/tests/: helpers.h  json_builder_test.h  json_reader_test.h  json_test.h  make_database_test.h  map_renderer_test.h  request_handler_test.h  svg_test.h  transport_catalogue_test.h  transport_router_test.h
transport-catalogue/tests/data/json_requests/: full_test__output.json  test1.json  test2.json  test3.json  test3_result.json  test4.json  test4_wo_map_req.json  test4_wo_map_req__output.json  test5.json  test_map_1.json  test_map_1__output.json
transport-catalogue/tests/data/router/: test1.json  test1_output.json  test2_output.json  test3.json  test3_output.json  test4.json  test4_output.json
transport-catalogue/tests/data/serialization/: s14_1_opentest_1.json  s14_1_opentest_1_answer.json  s14_1_opentest_1_process_requests.json  s14_1_opentest_2.json  s14_1_opentest_2_answer.json  s14_1_opentest_2_process_requests.json  s14_1_opentest_3.json  s14_1_opentest_3_answer.json  s14_1_opentest_3_process_requests.json  s14_2_opentest_1.json  s14_2_opentest_1_answer.json  s14_2_opentest_1_process_requests.json  s14_2_opentest_2.json  s14_2_opentest_2_answer.json  s14_2_opentest_2_process_requests.json  s14_2_opentest_3.json  s14_2_opentest_3_answer.json  s14_2_opentest_3_process_requests.json  s14_3_opentest_1.json  s14_3_opentest_1_answer.json  s14_3_opentest_1_process_requests.json  s14_3_opentest_2.json  s14_3_opentest_2_answer.json  s14_3_opentest_2_process_requests.json  s14_3_opentest_3.json  s14_3_opentest_3_answer.json  s14_3_opentest_3_process_requests.json  step1_test1.json  step1_test1_expected_res.json  step1_test2.json  step1_test2_expected_res.json  step1_test2_request.json  step1_test3_2.json  step1_test3_2_request.json  step1_test3_expected_res.json  step2_test1_expected_res.json  step2_test2_expected_res.json  step2_test2_request.json  step3_test1.json  step3_test1_expected_res.json  (+2 more)
transport-catalogue/tests/data/svg_render/: test_1.json  test_route_names_2.json  test_route_names_full.json  with_render_settings(test1).json  with_render_settings(test23).json
transport-catalogue/tests/data/svg_render/stop_markers/: test_1.json  test_full.json
transport-catalogue/training/: cache.h  cats_and_witches.h  tree.h
transport-catalogue/training/draw/: canvas.h  common.h  draw_test.h  shapes.h  texture.h
transport-catalogue/training/house/: house.h
transport-catalogue/training/people/: example.h  people.cpp  people.h  supervisor.h
transport-catalogue/training/webinars_data/: Транспортный справочник_6-18-2022-08-08.pptx
transport-catalogue/training11/: file_size.h  filesystem_directory_iterator.h  hotel_manager.cpp  iile.cpp  lazy_value.h  regex_preprocessor.cpp
transport-catalogue/training11/binary_files/: decompressor.h  unique_ptr.cpp
transport-catalogue/training11/travel_raii/: trip_manager.h
transport-catalogue/training11/travel_raii2/: booking.h
transport-catalogue/training12/: any.cpp  domain_checker.cpp  ebook.cpp  iterators.cpp  print_stats.cpp  random_container.cpp
transport-catalogue/training12/budget_manager/: budget_manager.h  date.h  main.cpp  parser.h
transport-catalogue/training12/budget_manager2/: budget_manager.h  bulk_updater.h  date.h  entities.h  parser.cpp  parser.h  summing_segment_tree.h
transport-catalogue/training12/peer_review/: CheckDateTimeValidity.cpp  LoadPerson.cpp  ParseCitySubjson.cpp
transport-catalogue/training12/pir_review/: ParseCitySubjson.cpp
transport-catalogue/training13/optional/: main.cpp  optional.h
transport-catalogue/training13/vector/: vector.h
vector/: main.cpp  optional.h  vector.h
vector/simple_vector/: array_ptr.h  simple_vector.h
vector/tests/: simple_vector_test.cpp  simple_vector_test.h
